# serializer version: 1
# name: test_binary_sensors[binary_sensor.car-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.car',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': 'mdi:car-electric',
    'original_name': 'Car',
    'platform': 'sense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345-abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.car-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Sense.com',
      'device_class': 'power',
      'friendly_name': 'Car',
      'icon': 'mdi:car-electric',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.car',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_binary_sensors[binary_sensor.oven-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.oven',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': 'mdi:stove',
    'original_name': 'Oven',
    'platform': 'sense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345-def456',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.oven-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Sense.com',
      'device_class': 'power',
      'friendly_name': 'Oven',
      'icon': 'mdi:stove',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.oven',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
